@@ -128,6 +128,7 @@ As part of tackling Wagtail’s technical debt and improving [CSP compatibility]
  * Replace ModelAdmin history header human readable date template tag (LB (Ben) Johnston)
  * Update uuid to v9 and Jest to v29, with `jest-environment-jsdom` and new snapshot format (LB (Ben) Johnston)
  * Update test cases producing undesirable console output due to missing mocks, uncaught errors, warnings (LB (Ben) Johnston)
+ * Remove unused snippets _header_with_history.html template (Thibaud Colas)
 
 ## Upgrade considerations
 
