@@ -1,20 +1,0 @@
-{% extends "wagtailadmin/shared/header_with_locale_selector.html" %}
-{% load wagtailadmin_tags i18n %}
-
-{% block extra_rows %}
-    {% if latest_log_entry %}
-        <div class="row last-updated">
-            <ul>
-                <li>
-                    {% avatar user=latest_log_entry.user size="small" tooltip=latest_log_entry.user_display_name %}
-                    {% trans "Last updated" %}
-                    {% human_readable_date date=latest_log_entry.timestamp %}
-                </li>
-                {% if history_url %}
-                    <li><a href="{{ history_url }}">{% icon "history" classname="default" %} {% trans "History" %}</a></li>
-                {% endif %}
-                <li>{% icon "snippet" classname="default" %} {{ model_opts.verbose_name|capfirst }}</li>
-            </ul>
-        </div>
-    {% endif %}
-{% endblock %}
