@@ -85,6 +85,7 @@ Changelog
  * Maintenance: Replace ModelAdmin history header human readable date template tag (LB (Ben) Johnston)
  * Maintenance: Update uuid to v9 and Jest to v29, with `jest-environment-jsdom` and new snapshot format (LB (Ben) Johnston)
  * Maintenance: Update test cases producing undesirable console output due to missing mocks, uncaught errors, warnings (LB (Ben) Johnston)
+ * Maintenance: Remove unused snippets _header_with_history.html template (Thibaud Colas)
 
 
 5.0.2 (21.06.2023)
